# SystemHealthCheck

./: CMakeLists.txt  LICENSE
include/: amsi_scanner.hpp  basic_log.hpp  com_error.hpp  firewall_helper.hpp  log_manager.hpp  module_validator.hpp  net_manager.hpp  pch.hpp  redirected_io_pipe.hpp  restore_point_helper.hpp  simple_timer.hpp  thread_enumerator.hpp  utilities.hpp  win_update_manager.hpp  wmi_manager.hpp
src/: amsi_scanner.cpp  log_manager.cpp  main.cpp  module_validator.cpp  net_manager.cpp  pch.cpp  redirected_io_pipe.cpp  restore_point_helper.cpp  thread_enumerator.cpp  utilities.cpp  win_update_manager.cpp  wmi_manager.cpp
